# izba-docs

./: .coveragerc  .dockerignore  .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
izba_docs/: asgi.py  settings.py  urls.py  wsgi.py
izba_docs_api/: __init__.py  admin.py  apps.py  models.py  routers.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
izba_docs_api/migrations/: 0001_initial.py  0002_auto_20210721_1036.py
proxy/: app.conf
tests/: conftest.py  schemas.py  settings.py  test_document_serve_view.py  test_document_viewset.py  test_event_viewset.py  test_serve_document_view.py
web/: .env.production.example  Dockerfile  Dockerfile.dev  default.conf
